landing Page Functional, Day 2 Finished

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
 <body>
 
-  <section class="fwh-slide">
-
+  
+  
+  <section class="fwh-slide fwh-slide--1">
     <nav class="mainNav">
       <a href="index.html" id="logoLink"><img class="mainNavLogo" src="img/2.png"></a>
       <ul class="mainNavUl">
@@ -44,11 +45,11 @@
         </div>
       </div>
       
-      <a href="#secondPage" id="read-more-btn">Read More!</a>
+      <a href="#secondPage" id="read-more-btn">Learn More!</a>
     
     </div>
   </section>
-
+  
 
 
   <section class="fwh-slide fwh-slide--2" id="secondPage">
