Made the Front Home Page Better

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
 <body>
 
-  
-  
+
+
+
   <section class="fwh-slide fwh-slide--1">
     <nav class="mainNav">
       <a href="index.html" id="logoLink"><img class="mainNavLogo" src="img/2.png"></a>
@@ -32,12 +33,10 @@
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
-
+  
     <div class="landing-page">
       <div id="home">
-        <img src="img/IMG_0448.png" alt="">
-        
-
+        <img src="img/IMG_0448.png" class="responsive">
         <div id="home-text">
           <h1>Sean Yan</h1>
           <hr>
