Testing out Javascript
	Trying to build a nutrition web app hosted on my personal website
	The idea is to host many web app on my website
	Simplyly created the additional HTML in this branch.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="style/nav.css">
   <link rel="stylesheet" href="style/fwh-slide.css">
   <link rel="stylesheet" href="style/landing-page.css">
+
+  <!-- <script src="script/index.js"></script> -->
+
 </head>
 
 
@@ -29,6 +32,7 @@
       <a href="index.html" id="logoLink"><img class="mainNavLogo" src="img/2.png"></a>
       <ul class="mainNavUl">
         <li><a href="index.html">Home</a></li>
+        <li><a href="pages/webapp.html">Web App</a></li>
         <li><a href="pages/software.html">Software</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
@@ -74,6 +78,8 @@
   </section>  
 
 </body>
+
+<script src="script/index.js"></script>
 
 
 </html>
