--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     <div class="landing-page">
       <div id="home">
         <img src="img/IMG_0448.png" class="responsive">
-        <div id="home-text">
-          <h1>Sean Yan</h1>
-          <hr>
-          <p>Student and Developer.</p>
+        <div id="shadowBox">
+          <div id="home-text">
+            <h1>Sean Yan</h1>
+            <hr>
+            <p>Student and Developer.</p>
+          </div>
         </div>
       </div>
       
