Home Page Functional

--- a/index.html
+++ b/index.html
@@ -58,13 +58,55 @@
   <section class="fwh-slide fwh-slide--2" id="secondPage">
     <div id="Read-More-Page">
       
-      <h1>You are reading more about me..</h1>
-      
-      <p>This will be a paragraph of me describing my self and promoting my code.</p>
+      <h1 id="ReadMoreTitle"><strong>More about me!</strong></h1>
 
-      <button>Software</button>      
+      <div class="mainTitleSecondPage">
+        <h2>Hello! I am Sean! </h2>
+        <p>I am a inspired High School Student who is on his final year of high school</p>
+      </div>
 
+      <div id="mainParagraph">
+        <div class="Left-Side">
+          <h2>Goals:</h2>
+          <li>Study Computer Science in University!</li>
+          <li>Learn more Java, <br> grasp more of the fundemental of in Computer Science</li>
+
+          <h2>Current Projects:</h2>
+          <li>Personal Website</li>
+
+          <h2>Project in mind:</h2>
+          <li>Voice Command Bot</li>
+          <li>Notifier With RPi</li>
+
+          <h2>Interest:</h2>
+          <li>Automation</li>
+          <li>Web Scraping</li>
+          <li>Web Development</li>
+          <li>Technology</li>
+        </div>
+   
+        <div class="Right-Side">
+          <h2>Languages I know or learning:</h2>
+          <li>Python</li>
+          <li>Java (Learning)</li>
+          <li>Javascript (Learning)</li>
+          <li>C (Learning)</li>
+
+          <h2>Other Random Experience I have:</h2>
+          <li>Unity</li>
+          <li>C#</li>
+          <li>Git</li>
+          <li>IOT</li>
+
+          <h2>Reach me by email or my new upcoming website:</h2>
+          <p><a href="mailto:contact@twinkletoeszen.com">contact@twinkletoeszen.com</a> | (new website coming soon) <br> <a href="https://twinkletoes5.netlify.app/">Old Personal Website</a> <em>Warning Very Borken on Mobile</em></p>
+        </div>
+      </div>
+
+      <!-- <button>Software</button>       -->
     </div>
+
+
 
     <div id="footer">
       <p>&copy; Sean Yan, TZ</p>
