Small Additional to the Home Page Read More

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>Learn more Java, <br> grasp more of the fundemental of in Computer Science</li>
 
           <h2>Current Projects:</h2>
-          <li>Personal Website</li>
+          <li>Personal Website <em>(this one right here!)</em></li>
 
           <h2>Project in mind:</h2>
           <li>Voice Command Bot</li>
